[package]
name = "mypocket"
version = "0.0.1"
description = "Read pocket articles for my remarkable2."
authors = ["Light Ning <lightning1141@gmail.com>"]
repository = "https://github.com/light4/mypocket"
license = "MIT"
readme = "README.md"
keywords = ["remarkable2", "pocket", "remarkable-tablelet", "remarkable"]
categories = ["command-line-utilities", "network-programming"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
thiserror = "1"
